<resources>
    <string name="app_name">Maruti Subscription</string>
    <string name="register_via">Register Via</string>

    <!-- TODO: Remove or change this placeholder text -->

    <string name="txtEmail">Email</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="btn_nxt">NEXT</string>
    <string name="intro_test_text">Test 1</string>
    <string name="intro_test_title">Title 1</string>
    <string name="get_started">Get started</string>
    <string name="txtRegister">Continue To Register</string>
    <string name="txtForgotPassword">Forgot Password</string>
    <string name="txtGetOTP">GET OTP</string>
    <string name="txtCreatePassword">Create Password</string>
    <string name="txtEnterEmail">Enter Email ID</string>
    <string name="txtEnterName">Enter Your Name</string>
    <string name="txtProfileDetailsTitle">Enter Your details via Email</string>
    <string name="txtFetchProfileDetailsTitle">Please enter your personal details</string>
    <string name="txtGender">Gender</string>
    <string name="txtName">Name</string>
    <string name="txtDOB">Date of Birth</string>
    <string name="txtAddDocuments">Continue to add documents</string>
    <string name="sign_in_title">Please provide your details to proceed</string>
    <string name="textEnterIDOrMobile">Enter ID/ Mobile No.</string>
    <string name="textForgotPassword">Forgot Password</string>
    <string name="textGetOTP">GET OTP</string>
    <string name="textSignIn">SIGN IN</string>
    <string name="textPersonalInfoTitle">ADD PERSONAL INFORMATION</string>
    <string name="textGenderMale">Male</string>
    <string name="textGenderFemale">Female</string>

    <!--Intro Screen Title String Arrays-->
    <string-array name="splash_intro_title">
        <item>Start Subscribing 1</item>
        <item>Start Subscribing 2</item>
        <item>Start Subscribing 3</item>
    </string-array>


    <!--Intro Screen text String Arrays-->
    <string-array name="splash_intro_text">
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
            industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
            scrambled it to make a type specimen book
        </item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
            industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
            scrambled it to make a type specimen book
        </item>
        <item>Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the
            industry\'s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and
            scrambled it to make a type specimen book
        </item>
    </string-array>
    <string name="title_activity_remove_it">RemoveIt</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="yourCity">Your city</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="popular_cities">POPULAR CITIES</string>
    <string name="other_cities">OTHER CITIES</string>
    <string name="search_city">Search City</string>


    <!-- calender range string values -->
    <string name="cdrp_mon">Mon</string>
    <string name="cdrp_tue">Tue</string>
    <string name="cdrp_wed">Wed</string>
    <string name="cdrp_thu">Thu</string>
    <string name="cdrp_fri">Fri</string>
    <string name="cdrp_sat">Sat</string>
    <string name="cdrp_sun">Sun</string>

    <string-array name="week_sun_sat">
        <item>@string/cdrp_sun</item>
        <item>@string/cdrp_mon</item>
        <item>@string/cdrp_tue</item>
        <item>@string/cdrp_wed</item>
        <item>@string/cdrp_thu</item>
        <item>@string/cdrp_fri</item>
        <item>@string/cdrp_sat</item>
    </string-array>

    <string name="cancel">Cancel</string>
    <string name="done">Done</string>
    <string name="title_time_picker">Select Time</string>
    <string name="select_time">Select a Time</string>

</resources>
