<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context="com.msil.sharedmobility.subscribe.presentation.ui.auth.AddPersonalInfoFragment">

    <ScrollView
            android:id="@+id/sv_sign_in"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_above="@+id/btn_nxt">
        <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/margin_32">




            <TextView
                    android:text="@string/textPersonalInfoTitle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_gravity="center_horizontal"
                    android:id="@+id/tv_screen_title"
                    android:layout_below="@+id/rl_media_container"
                    style="@style/TextBigUpperBold"
                    android:layout_marginTop="@dimen/margin_32"/>

            <TextView
                    android:id="@+id/tv_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:layout_below="@+id/tv_screen_title"
                    android:text="@string/txtFetchProfileDetailsTitle"
                    style="@style/TextBold"
                    android:layout_marginTop="@dimen/default_margin"/>


            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_email"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_below="@id/tv_title">

                <EditText
                        android:hint="@string/txtEmail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:maxLines="1"
                        android:id="@+id/et_email"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/default_margin"/>
            </com.google.android.material.textfield.TextInputLayout>



            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_name"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_below="@id/til_email">

                <EditText
                        android:hint="@string/txtName"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:maxLines="1"
                        android:id="@+id/et_name"
                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/default_margin"/>
            </com.google.android.material.textfield.TextInputLayout>




            <TextView
                    android:text="@string/txtGender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/til_name"
                    android:id="@+id/labelGender"
                    app:layout_constraintTop_toTopOf="parent"
                    android:layout_marginTop="@dimen/margin_32"/>
            <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/default_margin"
                    android:orientation="horizontal"
                    android:id="@+id/rg_select_gender"

                    android:layout_below="@id/labelGender">
                <RadioButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:id="@+id/male"
                             android:text="@string/textGenderMale"
                />
                <RadioButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:id="@+id/female"
                             android:text="@string/textGenderFemale"
                />
              <!--  <RadioButton android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
                             android:layout_weight="1"
                             android:id="@+id/other"
                             android:text="Other"
                />-->
            </RadioGroup>

            <com.google.android.material.textfield.TextInputLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/til_dob"
                    android:layout_marginTop="@dimen/margin_32"
                    android:layout_below="@+id/rg_select_gender">


                <EditText
                        android:hint="@string/txtDOB"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_centerHorizontal="true"
                        android:drawableEnd="@drawable/ic_calendar"
                        android:inputType="none"
                        android:clickable="true"
                        android:focusable="false"
                        android:id="@+id/et_dob"

                        app:layout_constraintTop_toTopOf="parent"
                        android:layout_marginTop="@dimen/default_margin"
                        android:drawableRight="@drawable/ic_calendar"/>

            </com.google.android.material.textfield.TextInputLayout>



        </RelativeLayout>
    </ScrollView>

    <Button
            android:id="@+id/btn_add_doc"
            android:layout_width="match_parent"
            android:text="@string/txtAddDocuments"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_height="wrap_content"
            style="@style/ButtonBigUpperBlueBold"
            android:layout_alignParentBottom="true"
            android:layout_margin="@dimen/default_margin"
            android:enabled="false"/>


</RelativeLayout>