<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:tools="http://schemas.android.com/tools" xmlns:app="http://schemas.android.com/apk/res-auto"
                tools:context=".presentation.ui.home.components.VehicleSelectFragment"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:id="@+id/header">
        <ImageView android:layout_width="wrap_content"
                   android:layout_height="20dp"
                   android:src="@drawable/ic_backarrow"
                   android:layout_marginLeft="@dimen/default_margin"
                   app:layout_constraintStart_toStartOf="parent"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:id="@+id/backArrow"/>
        <AutoCompleteTextView android:layout_width="0dp"
                              android:layout_height="wrap_content"
                              android:id="@+id/autocomplete_search"
                              android:src="@drawable/ic_backarrow"
                              android:background="@null"
                              android:hint="@string/search_city"
                              app:layout_constraintBottom_toBottomOf="parent"
                              app:layout_constraintTop_toTopOf="parent"
                              app:layout_constraintStart_toEndOf="@+id/backArrow" android:layout_marginStart="16dp"
                              app:layout_constraintEnd_toStartOf="@+id/myLocation" android:layout_marginEnd="8dp"/>
        <ImageView android:layout_width="0dp"
                   android:layout_height="wrap_content"
                   android:src="@drawable/ic_my_location_black_24dp"
                   app:layout_constraintBottom_toBottomOf="parent"
                   app:layout_constraintTop_toTopOf="parent"
                   android:id="@+id/myLocation"
                   app:layout_constraintVertical_bias="0.615" app:layout_constraintEnd_toEndOf="parent"
                   android:layout_marginEnd="16dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
    <RelativeLayout android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_below="@id/header"
    android:id="@+id/homeLabel">
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            android:layout_marginBottom="@dimen/default_margin"
            style="@style/TextLabelBold"
            android:text="@string/popular_cities"/>
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_alignParentEnd="true"
            android:textColor="@color/colorWhite"
            android:drawableLeft="@drawable/ic_arrow_drop_down_circle_black_24dp"
           />
    </RelativeLayout>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/recycle_popular_city"

            app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
            android:layout_below="@id/homeLabel">


    </androidx.recyclerview.widget.RecyclerView>

    <View
            android:id="@+id/divider"
            android:layout_below="@id/recycle_popular_city"
            android:layout_width="match_parent"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginStart="@dimen/default_margin"
            android:layout_marginEnd="@dimen/default_margin"
            android:layout_height="2dp"

            android:background="@color/colorDivider"
    />
    <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/otherTextLabel"
            android:layout_below="@id/divider"
            android:layout_marginTop="@dimen/default_margin"
            android:layout_marginLeft="@dimen/default_margin"
            style="@style/TextLabelBold"
            android:text="@string/other_cities"/>
    <androidx.recyclerview.widget.RecyclerView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/default_margin"
            android:id="@+id/recycle_other_city"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
            android:layout_below="@id/otherTextLabel">


    </androidx.recyclerview.widget.RecyclerView>
</RelativeLayout>
